# swagger.json
@@ -46,6 +46,28 @@
         ],
         "description": "Find all existing notices",
         "operationId": "getAllNotices",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "description": "Page number for pagination",
+              "default": 1
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "description": "Number of articles per page.",
+              "default": 9
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successful operation",
@@ -119,6 +141,55 @@
             "schema": {
               "type": "string",
               "description": "Category for search"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "description": "Page number for pagination",
+              "default": 1
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "description": "Number of articles per page.",
+              "default": 9
+            }
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "description": "Type of sorting.",
+              "enum": [
+                "newest",
+                "oldest",
+                "cheapest",
+                "expensive"
+              ],
+              "default": "newest"
+            }
+          },
+          {
+            "name": "goodtype",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Type of sorting.",
+              "enum": [
+                "new",
+                "used"
+              ]
             }
           }
         ],
@@ -315,10 +386,13 @@
             "type": "string",
             "example": "Very good chair for your home"
           },
-          "photo": {
-            "type": "string",
-            "description": "notice image url",
-            "example": "photos\\\\2FtTgOgfRKgaEsqQxVhPG_pet.jpg"
+          "photos": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "description": "notice image url",
+              "example": "https://yarmarok-bucket.s3.amazonaws.com/BSqREaubo3hWhDvb6lNZ3_2.jpg"
+            }
           },
           "location": {
             "type": "string",
